# crowd-cast

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  USER_INSTALL.md  build.rs
.github/workflows/: build-plugin.yml  ci.yml  linux-release.yml  windows-release.yml
agent/: Cargo.toml  build.rs
agent/config/: default.toml
agent/src/: config.rs  main.rs
agent/src/data/: events.rs  format.rs
agent/src/input/: backend.rs  evdev_backend.rs  mod.rs  rdev_backend.rs
agent/src/installer/: app_selector.rs  autostart.rs  mod.rs  obs_detector.rs  obs_websocket.rs  permissions.rs  plugin_install.rs  profile.rs  wizard.rs
agent/src/obs/: controller.rs  manager.rs  mod.rs  setup.rs
agent/src/sync/: engine.rs  mod.rs
agent/src/ui/: mod.rs  tray.rs  tray_ffi.rs
agent/src/upload/: presigned.rs
config/: default.toml
docs/: LINUX_AUTOUPDATE_ANALYSIS.md  LINUX_HANDOFF.md  LINUX_LIBOBS_PROVISIONING.md  LINUX_PORTING_PLAN.md
installer/linux/: build-appimage.sh  crowd-cast.desktop  crowdcast.desktop
installer/macos/: Info.plist  build-dmg.sh
installer/windows/: crowd-cast.iss  crowd-cast.nsi  crowdcast.nsi
obs-crowd-cast-plugin/: CMakeLists.txt
obs-crowd-cast-plugin/data/locale/: en-US.ini
obs-crowd-cast-plugin/src/: platform.h  platform_windows.c  plugin.c
obs-crowdcast-plugin/: CMakeLists.txt
obs-crowdcast-plugin/data/locale/: en-US.ini
obs-crowdcast-plugin/src/: platform.h  platform_linux.c  platform_macos.m  plugin.c
packaging/linux/: Dockerfile  README.md  build-binary.sh  build-bundle.sh  install.sh  run-build-binary.sh  run-build.sh  smoke-test-host.sh
packaging/linux/patches/: obs-pipewire-connect-node.patch
resources/gnome-extension/crowd-cast-focus@p-doom.org/: extension.js  metadata.json
resources/macos/: AppIcon.icns  Info.plist
resources/obs-profile/: basic.ini
resources/obs-profile/scenes/: crowd-cast.json  crowdcast.json
resources/windows/: crowd-cast.manifest  crowd-cast.rc
scripts/: build-and-publish-macos.sh  build-windows-installer.ps1  bundle-macos.sh  delete-local-install.sh  fetch-sparkle.sh  fetch-winsparkle.ps1  generate-appcast-win.ps1  generate-appcast.sh  overlay_keylogs.py  release-linux.sh  release-macos.sh  setup-macos-signing.sh
src/: config.rs  crash.rs  logging.rs  main.rs  resume_linux.rs
src/auth/: mod.rs  oauth.rs
src/capture/: action.rs  apps.rs  context.rs  frontmost.rs  gnome_screencast.rs  mac_geometry.rs  mod.rs  monitor_layout.rs  recording.rs  recovery.rs  sources.rs  wayland_output.rs  window_geometry.rs  x11_windows.rs
src/capture/focus/: gnome.rs  mod.rs  wlr.rs
src/data/: events.rs  format.rs  mod.rs
src/input/: backend.rs  evdev_backend.rs  mod.rs  rdev_backend.rs
src/input/secure/: atspi_gate.rs  mod.rs
src/installer/: autostart.rs  gnome_focus.rs  mod.rs  permissions.rs  requirements.rs  wizard.rs  wizard_ffi.rs  wizard_gui.rs  wizard_windows.rs
src/sync/: engine.rs  mod.rs
src/ui/: action_overlay_darwin.m  app_selector.rs  appcast_sig.rs  aumid_windows.rs  mod.rs  notifications.rs  notifications_darwin.m  notify_linux.rs  platform_tray.rs  tray.h  tray.rs  tray_darwin.m  tray_ffi.rs  tray_linux.rs  tray_macos.rs  tray_windows.rs  update_dialog.rs  updater.rs  updater_darwin.h  updater_darwin.m  updater_linux.rs  updater_windows.rs  wizard_darwin.h  wizard_darwin.m  wizard_linux.c
src/upload/: log_shipper.rs  mod.rs  presigned.rs
