[package]
name = "crowd-cast-agent"
version = "1.0.3"
edition = "2021"
description = "crowd-cast data collection agent - captures paired screencast and input data"
license = "MIT"
repository = "https://github.com/crowd-cast/crowd-cast"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Embedded libobs
libobs = { git = "https://github.com/p-doom/libobs-rs", branch = "linux-support" }
libobs-wrapper = { git = "https://github.com/p-doom/libobs-rs", branch = "linux-support" }
libobs-simple = { git = "https://github.com/p-doom/libobs-rs", branch = "linux-support" }
# NOTE: libobs-bootstrapper is NOT a general dependency. It downloads prebuilt OBS binaries
# at runtime (macOS/Windows) and hard-`compile_error!`s on Linux. On Linux, libobs is
# provided by a system install or a relocatable bundle located via CROWD_CAST_OBS_* env
# vars, so the crate is excluded from the Linux build. See the cfg(not(linux)) target deps
# below and docs/LINUX_LIBOBS_PROVISIONING.md.

# Input capture: rdev is declared per-platform below (non-Linux only). Linux uses evdev
# directly (src/input/evdev_backend.rs) -- rdev's X11 listen path cannot emit true mouse
# deltas, while evdev gives raw pre-accel deltas and works on X11 + Wayland.

# HTTP client for pre-signed URL uploads
reqwest = { version = "0.12", features = ["json", "stream"] }

# Streaming utilities for efficient file uploads
tokio-util = { version = "0.7", features = ["io"] }

# Base64 encoding for OBS screenshots
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Configuration
toml = "0.8"
directories = "5"

# File watching
notify = "6"


# Image analysis
image = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# OAuth PKCE
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"

# UUID for session IDs
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
# Unix signal handling
libc = "0.2"

# Runtime OBS binary bootstrapper. Excluded on Linux: the crate hard-`compile_error!`s
# there, and Linux provisions libobs via a system install or relocatable bundle instead
# (see src/capture/context.rs + docs/LINUX_LIBOBS_PROVISIONING.md).
[target.'cfg(not(target_os = "linux"))'.dependencies]
libobs-bootstrapper = { git = "https://github.com/p-doom/libobs-rs", branch = "linux-support" }
# Input capture for macOS/Windows (Linux uses evdev instead).
rdev = { git = "https://github.com/p-doom/rdev" }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux evdev fallback for Wayland
evdev = "0.12"
# AT-SPI client for secure-input gating: detects focused password fields so their
# keystrokes can be withheld from capture. Pure-Rust (zbus/D-Bus), no C linkage.
# See src/input/secure/. zbus is re-exported as `atspi::zbus`.
atspi = { version = "0.30", default-features = false, features = ["connection", "proxies", "tokio", "zbus"] }
# Native X11 frontmost-window query (replaces shelling out to the `xdotool` binary).
# x11rb's default RustConnection speaks the X11 wire protocol over the socket directly,
# so this needs no system library (no libX11/libxcb) and no external binary installed.
# Only the XWayland/X11 focus path uses it; the Wayland-native focus signal is separate.
# See src/capture/frontmost.rs::get_frontmost_app_x11.
x11rb = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific (for permissions)
objc = "0.2"
# Zip extraction for plugin bundles
zip = "2"
# Display detection for capture recovery
core-graphics = "0.24"
# Unified logging (os_log) integration
tracing-oslog = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific
windows = { version = "0.58", features = ["Win32_Foundation"] }

[build-dependencies]
cc = "1"

[target.'cfg(target_os = "macos")'.build-dependencies]
cargo-obs-build = { git = "https://github.com/p-doom/libobs-rs", branch = "linux-support" }

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
