[package]
name = "crowd-cast-agent"
version = "1.0.4"
edition = "2021"
description = "crowd-cast data collection agent - captures paired screencast and input data"
license = "MIT"
repository = "https://github.com/crowd-cast/crowd-cast"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Embedded libobs
libobs = { git = "https://github.com/p-doom/libobs-rs", branch = "macos-support" }
libobs-wrapper = { git = "https://github.com/p-doom/libobs-rs", branch = "macos-support" }
libobs-simple = { git = "https://github.com/p-doom/libobs-rs", branch = "macos-support" }
libobs-bootstrapper = { git = "https://github.com/p-doom/libobs-rs", branch = "macos-support" }

# Input capture
rdev = { git = "https://github.com/p-doom/rdev" }

# HTTP client for pre-signed URL uploads
reqwest = { version = "0.12", features = ["json", "stream"] }

# Streaming utilities for efficient file uploads
tokio-util = { version = "0.7", features = ["io"] }

# Base64 encoding for OBS screenshots
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Configuration
toml = "0.8"
directories = "5"

# File watching
notify = "6"


# Image analysis
image = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# OAuth PKCE
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"

# UUID for session IDs
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
# Unix signal handling
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux evdev fallback for Wayland
evdev = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific (for permissions)
objc = "0.2"
# Zip extraction for plugin bundles
zip = "2"
# Display detection for capture recovery
core-graphics = "0.24"
# Unified logging (os_log) integration
tracing-oslog = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
# Pure-Rust system tray + menu (Tauri ecosystem) for the Windows PlatformTray
tray-icon = "0.19"
muda = "0.15"
# Windows toast notifications (Tauri ecosystem)
tauri-winrt-notification = "0.7"
# Native Win32 GUI for the Windows setup wizard / app picker
native-windows-gui = "1"
# Raw Win32 for ListView checkbox state (LVS_EX_CHECKBOXES) in the wizard
winapi = { version = "0.3", features = ["winuser", "commctrl", "windef", "minwindef", "basetsd"] }
# Dynamically load WinSparkle.dll for auto-updates (optional at runtime)
libloading = "0.8"

[build-dependencies]
cc = "1"

[target.'cfg(target_os = "macos")'.build-dependencies]
cargo-obs-build = { git = "https://github.com/p-doom/libobs-rs", branch = "macos-support" }

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
# Embeds the app manifest (Common Controls v6) required by native-windows-gui
embed-resource = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
